--- a/frontend/src/components/HomeHeader/styles.scss
+++ b/frontend/src/components/HomeHeader/styles.scss
@@ -1,10 +1,24 @@
 .container {
+  background-color: #9b0000;
+  height: 166px;
+  .content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0.5rem 2.5rem 0.5rem 0;
 
-  svg{
     width: 100%;
     height: 100%;
 
-    color: black;
-    fill: black;
+    h1 {
+      font-size: 2.8rem;
+      color: #f5dfd0;
+      font-family: "Roboto", sans-serif;
+    }
+
+    img{
+      padding-top: 10.5rem;
+      height: 28rem;
+    }
   }
 }
