--- a/frontend/src/components/HomeHeader/styles.scss
+++ b/frontend/src/components/HomeHeader/styles.scss
@@ -21,4 +21,16 @@
       height: 28rem;
     }
   }
+
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #9b0000;
+  color: white;
+  text-align: center;
+}
+
 }
