--- a/frontend/src/components/HomeContent/Button/styles.scss
+++ b/frontend/src/components/HomeContent/Button/styles.scss
@@ -3,7 +3,7 @@
   width: 260px;
   border: 0;
   border-radius: 2rem;
-  background: #E59500;
+  background: #e59500;
   color: rgb(37, 36, 36);
   font-size: 1.25rem;
   font-weight: bold;
@@ -16,5 +16,27 @@
 
   &:hover {
     filter: brightness(0.8);
+  }
+}
+
+.modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 65%;
+  height: 900px;
+  background-color: rgba($color: rgb(243, 242, 239), $alpha: 0.95);
+  border-radius: 0.3rem;
+  box-shadow: -2px 9px 33px 11px rgba(0, 0, 0, 0.41);
+  padding: 4;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  h1 {
+    margin: 2rem auto;
   }
 }
