--- a/frontend/src/components/HomeContent/Button/styles.scss
+++ b/frontend/src/components/HomeContent/Button/styles.scss
@@ -1,6 +1,7 @@
 .subscribeButton {
   height: 4rem;
-  width: 260px;
+  width: 250px;
+  padding: 2rem 2rem;
   border: 0;
   border-radius: 2rem;
   background: #e59500;
