--- a/frontend/src/components/HomeContent/styles.scss
+++ b/frontend/src/components/HomeContent/styles.scss
@@ -24,6 +24,7 @@
         height: 300px;
         background-color: rgba($color: #d10808, $alpha: 0.9);
         opacity: 0.8;
+        min-width: 11.625rem;
 
         .item {
           h1 {
