--- a/frontend/src/components/EventForm/styles.scss
+++ b/frontend/src/components/EventForm/styles.scss
@@ -1,58 +1,80 @@
-div.container-event{
-    border: none;
-    box-shadow: 1px 2px 18px 5px;
+div.container-event {
+  border: none;
+  box-shadow: 1px 2px 18px 5px;
+  margin: 8.5rem auto;
+  height: 40rem;
+  width: 75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #faf6f4;
+  flex-direction: column;
+
+  @media screen and (min-width: 1366px) and (max-width: 1366px) and (min-height: 768px) and (max-height: 768px) {
     margin: 1.7rem auto;
     height: 22rem;
     width: 32rem;
+  }
+
+  form {
     display: flex;
     align-items: center;
-    justify-content: center;
-    background-color:#faf6f4;
     flex-direction: column;
-    
-    input{
-        height: 2rem;
-        width: 29rem;
-        font-size: 1rem;
-        color : rgb(34, 33, 33);
+  }
+
+  input {
+    height: 4rem;
+    width: 100%;
+    margin: 0.3rem 0;
+    font-size: 1rem;
+    color: rgb(34, 33, 33);
+    @media screen and (min-width: 1366px) and (max-width: 1366px) and (min-height: 768px) and (max-height: 768px) {
+      height: 2rem;
+      width: 29rem;
+      font-size: 1rem;
+    }
+  }
+
+  .columns {
+    display: flex;
+    justify-content: space-between;
+    width: 53rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    input {
+      text-align: center;
+      width: 25rem;
+      display: flex;
+      @media screen and (min-width: 1366px) and (max-width: 1366px) and (min-height: 768px) and (max-height: 768px) {
+        width: 13.6rem;
+      }
+    }
+    .column-1 {
+      display: flex;
+      flex-direction: column;
     }
 
-
-
-    .columns{
-        display: flex;
-        justify-content: space-between;
-        width: 465px;
-        margin-top: 2rem;
-        margin-bottom: 3rem;
-        input{
-            width: 13.6rem;
-            display: flex;
-        }
-        .column-1{
-            display: flex;
-            flex-direction: column;
-            
-          
-        }
-    
-        .colum-2{
-            display: flex;
-            flex-direction: column;
-        }
+    .colum-2 {
+      display: flex;
+      flex-direction: column;
     }
+  }
 }
 
 button {
-    height: 3rem;
-    width: 8rem;
-    background-color: #e59500;
-    border: none;
-    box-shadow: -1px 3px 20px 0px;
-    margin-top: 2rem;
+  height: 3rem;
+  width: 8rem;
+  background-color: #e59500;
+  border: none;
+  box-shadow: -1px 3px 20px 0px;
+  margin-top: 2rem;
 }
 
+.banner {
+  text-align: center;
+}
 
-.banner{
-    text-align: center;
+.error {
+  color: red;
+  font-size: 1.7rem;
 }
