--- a/frontend/src/components/HomeContent/Button/styles.scss
+++ b/frontend/src/components/HomeContent/Button/styles.scss
@@ -8,6 +8,7 @@
   color: rgb(37, 36, 36);
   font-size: 1.25rem;
   font-weight: bold;
+  margin-bottom: 2rem;
 
   display: flex;
   align-items: center;
