--- a/frontend/src/components/HomeContent/styles.scss
+++ b/frontend/src/components/HomeContent/styles.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
 
-    .carousel{
+    .carousel {
       height: 80rem;
     }
     .showItem-container {
@@ -15,8 +15,8 @@
       justify-content: center;
       align-items: flex-end;
 
-      &:first-child{
-        margin-left: 4.5rem;
+      &:first-child {
+        margin-left: 7.5rem;
       }
 
       .show-item {
@@ -27,6 +27,10 @@
         min-width: 11.625rem;
 
         .item {
+          display: flex;
+          flex-direction: column;
+          align-items: space-between;
+          justify-content: center;
           h1 {
             margin-top: 0.2rem;
             text-align: center;
@@ -38,6 +42,11 @@
             width: 9.5rem;
           }
 
+          h4 {
+            margin-top: 1.5rem;
+            margin-left: 1rem;
+          }
+
           .ingressos {
             margin-top: 0.5rem;
             width: 100%;
@@ -45,8 +54,24 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            font-size: 0.5rem;
+            font-size: 0.8rem;
             flex: 1;
+          }
+
+          .datas {
+            margin-top: 1rem;
+            margin-left: 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            h2 {
+              font-size: 18px;
+            }
+            h2:first-child {
+              margin: 5px 0;
+              font-size: 18px;
+            }
           }
         }
       }
