FIx: Routes and ohter frontend stuffs

--- a/frontend/src/components/SignUpForm/styles.scss
+++ b/frontend/src/components/SignUpForm/styles.scss
@@ -1,9 +1,11 @@
 div.container-SingUp{
+    overflow: hidden;   
     border: none;
-    box-shadow: 1px 2px 18px 5px;
+    box-shadow: 1px 2px 10px 3px;
+    border-radius: 3px;
     margin: 1.7rem auto;
-    height: 22rem;
-    width: 32rem;
+    height: 30rem;
+    width: 50rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,18 +23,30 @@ div.container-SingUp{
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 45rem;
     }
 
 
     .columns{
         display: flex;
         justify-content: space-between;
-        width: 465px;
+        width: 40rem;
         margin-top: 2rem;
         margin-bottom: 3rem;
         input{
-            width: 13.6rem;
+            width: 18rem;
             display: flex;
+            margin: 0.3rem 0;
+            border: none;
+            height: 2rem;
+            text-align: center; 
+            border-radius: 2px;
+
+            &:hover{
+                background-color: rgb(236, 226, 226);
+
+            }
+            transition: background-color 0.7s;
         }
         .column-1{
             display: flex;
@@ -53,7 +67,13 @@ button {
     width: 8rem;
     background-color: #e59500;
     border: none;
-    box-shadow: -1px 3px 20px 0px;
     margin-top: 2rem;
     font-family: Roboto, sans-serif;
+    border-radius: 3px;
+
+    &:hover{
+        background-color: #f3b33c;
+
+    }
+    transition: background-color 0.5s;
 }
